// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartTable component Render CartTable with initial state Render CartTable with initial state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="cart__title"
      >
        Ваша корзина пуста!
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="cart__title"
    >
      Ваша корзина пуста!
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CartTable component Testing CartTable with items in Cart Render CartTable with items 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="cart"
      >
        <div
          class="cart__title"
        >
          Ваш заказ:
        </div>
        <div
          class="cart__list"
        >
          <div
            class="cart__item"
          >
            <div>
              1
            </div>
            <div
              class="cart__item-title"
            >
              string
            </div>
            <div
              class="cart__item-price"
            >
              2
              $
            </div>
            <div
              class="cart__item-counter"
            >
              <button
                class="cart__item-counter-btn"
              >
                +
              </button>
              <div
                class="cart__item-counter-count"
                data-testid="item-counter-count"
              >
                1
              </div>
              <button
                class="cart__item-counter-btn minus"
                data-testid="decrease_button"
              >
                -
              </button>
            </div>
            <div
              class="cart__item-price"
              data-testid="total-price-item-counter-count"
            >
              Total: 
              2.00
              $
            </div>
            <div
              class="cart__close"
              data-testid="remove_button"
            >
              ×
            </div>
          </div>
          <div
            class="cart__item"
          >
            <div>
              2
            </div>
            <div
              class="cart__item-title"
            >
              string2
            </div>
            <div
              class="cart__item-price"
            >
              1
              $
            </div>
            <div
              class="cart__item-counter"
            >
              <button
                class="cart__item-counter-btn"
              >
                +
              </button>
              <div
                class="cart__item-counter-count"
                data-testid="item-counter-count"
              >
                2
              </div>
              <button
                class="cart__item-counter-btn minus"
                data-testid="decrease_button"
              >
                -
              </button>
            </div>
            <div
              class="cart__item-price"
              data-testid="total-price-item-counter-count"
            >
              Total: 
              2.00
              $
            </div>
            <div
              class="cart__close"
              data-testid="remove_button"
            >
              ×
            </div>
          </div>
          <div
            class="cart-total-money"
          >
            Сумма за все товары : 
            3
            $
          </div>
          <button
            class="cart__btn"
            disabled=""
          >
            Оплатить
          </button>
          <button
            data-testid="clear_cart_button"
          >
            Очистить корзину
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="cart"
    >
      <div
        class="cart__title"
      >
        Ваш заказ:
      </div>
      <div
        class="cart__list"
      >
        <div
          class="cart__item"
        >
          <div>
            1
          </div>
          <div
            class="cart__item-title"
          >
            string
          </div>
          <div
            class="cart__item-price"
          >
            2
            $
          </div>
          <div
            class="cart__item-counter"
          >
            <button
              class="cart__item-counter-btn"
            >
              +
            </button>
            <div
              class="cart__item-counter-count"
              data-testid="item-counter-count"
            >
              1
            </div>
            <button
              class="cart__item-counter-btn minus"
              data-testid="decrease_button"
            >
              -
            </button>
          </div>
          <div
            class="cart__item-price"
            data-testid="total-price-item-counter-count"
          >
            Total: 
            2.00
            $
          </div>
          <div
            class="cart__close"
            data-testid="remove_button"
          >
            ×
          </div>
        </div>
        <div
          class="cart__item"
        >
          <div>
            2
          </div>
          <div
            class="cart__item-title"
          >
            string2
          </div>
          <div
            class="cart__item-price"
          >
            1
            $
          </div>
          <div
            class="cart__item-counter"
          >
            <button
              class="cart__item-counter-btn"
            >
              +
            </button>
            <div
              class="cart__item-counter-count"
              data-testid="item-counter-count"
            >
              2
            </div>
            <button
              class="cart__item-counter-btn minus"
              data-testid="decrease_button"
            >
              -
            </button>
          </div>
          <div
            class="cart__item-price"
            data-testid="total-price-item-counter-count"
          >
            Total: 
            2.00
            $
          </div>
          <div
            class="cart__close"
            data-testid="remove_button"
          >
            ×
          </div>
        </div>
        <div
          class="cart-total-money"
        >
          Сумма за все товары : 
          3
          $
        </div>
        <button
          class="cart__btn"
          disabled=""
        >
          Оплатить
        </button>
        <button
          data-testid="clear_cart_button"
        >
          Очистить корзину
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
